--- a/cargo.toml
+++ b/cargo.toml
@@ -4,5 +4,8 @@ version = "0.0.1"
 edition = "2021"
 
 [dependencies]
-bevy = "0.6"
-bevy_rapier2d = {version = "0.12.1", features = ["simd-stable", "render"] }
+anyhow = "1.0"
+thiserror = "1.0"
+bevy = "0.7"
+bevy_prototype_debug_lines = "0.6"
+heron = { version = "3.0.0", features = ["2d"] }
