--- a/cargo.toml
+++ b/cargo.toml
@@ -7,5 +7,11 @@ edition = "2021"
 anyhow = "1.0"
 thiserror = "1.0"
 bevy = "0.8"
-bevy_prototype_debug_lines = "0.6"
-heron = { version = "3.0.0", features = ["2d"] }
+bevy_prototype_debug_lines = "0.8"
+regex = "1"
+lazy_static = "1.3.0"
+bevy_rapier3d = { version = "*", features = [ "simd-stable", "debug-render" ] }
+bevy_flycam = "0.8.1"
+
+[profile.dev.package.rapier3d]
+opt-level = 3
