--- a/cargo.toml
+++ b/cargo.toml
@@ -12,6 +12,7 @@ regex = "1"
 lazy_static = "1.3.0"
 bevy_rapier3d = { version = "*", features = [ "simd-stable", "debug-render" ] }
 bevy_flycam = "0.8.1"
+tri-mesh = "0.5.0"
 
 [profile.dev.package.rapier3d]
 opt-level = 3
