--- a/cargo.toml
+++ b/cargo.toml
@@ -13,6 +13,14 @@ lazy_static = "1.3.0"
 bevy_rapier3d = { version = "*", features = [ "simd-stable", "debug-render" ] }
 bevy_flycam = "0.8.1"
 tri-mesh = "0.5.0"
+serde = "1"
+serde_json = "1.0"
 
-[profile.dev.package.rapier3d]
+[profile.dev]
+opt-level = 1
+
+[profile.dev.package."*"]
 opt-level = 3
+
+#[profile.dev.package.rapier3d]
+#opt-level = 3
