--- a/cargo.toml
+++ b/cargo.toml
@@ -4,23 +4,9 @@ version = "0.0.1"
 edition = "2021"
 
 [dependencies]
-anyhow = "1.0"
-thiserror = "1.0"
-bevy = "0.8"
-bevy_prototype_debug_lines = "0.8"
+bevy = "0.8.1"
 regex = "1"
-lazy_static = "1.3.0"
-bevy_rapier3d = { version = "*", features = [ "simd-stable", "debug-render" ] }
-bevy_flycam = "0.8.1"
-tri-mesh = "0.5.0"
+lazy_static = "1.4.0"
 serde = "1"
 serde_json = "1.0"
-
-[profile.dev]
-opt-level = 1
-
-[profile.dev.package."*"]
-opt-level = 3
-
-#[profile.dev.package.rapier3d]
-#opt-level = 3
+bmp = "0.5.0"
