--- a/cargo.toml
+++ b/cargo.toml
@@ -5,8 +5,10 @@ edition = "2021"
 
 [dependencies]
 bevy = "0.8.1"
+anyhow = "1.0.65"
 regex = "1"
 lazy_static = "1.4.0"
 serde = "1"
 serde_json = "1.0"
 bmp = "0.5.0"
+walkdir = "2"
