--- a/cargo.toml
+++ b/cargo.toml
@@ -4,11 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+anyhow = "1.0.69"
 bevy = "0.9.1"
-anyhow = "1.0.65"
-regex = "1"
+bmp = "0.5.0"
 lazy_static = "1.4.0"
+regex = "1"
 serde = "1"
 serde_json = "1.0"
-bmp = "0.5.0"
+thiserror = "1.0"
 walkdir = "2"
