--- a/cargo.toml
+++ b/cargo.toml
@@ -14,3 +14,5 @@ serde_json = "1.0"
 thiserror = "1.0"
 walkdir = "2"
 array2d = "0.3.0"
+bevy_flycam = "0.9.0"
+bevy_prototype_debug_lines = { version = "0.9", features = ["3d"] }
